# Lumen

./: Cargo.toml  README.md  README_EN.md  README_zh-CN.md  lumen.backends.json
src/: arch.rs  autograd.rs  backend.rs  kv_cache.rs  lib.rs  loader.rs  loss.rs  main.rs  module.rs  optim.rs  parallel.rs  precision.rs  tokenizer.rs
src/layers/: activation.rs  mod.rs
src/layers/attention/: encoding.rs  mod.rs  self_attention.rs
src/layers/basic/: dropout.rs  embedding.rs  linear.rs  mod.rs
src/layers/conv/: conv2d.rs  mod.rs  pool.rs
src/layers/norm/: mod.rs  rms_norm.rs
src/layers/rnn/: gru.rs  lstm.rs  mod.rs  rnn.rs
src/models/: llama.rs  mod.rs
src/ops/: arithmetic.rs  convolution.rs  fp_kernels.rs  fused.rs  int8_kernels.rs  matmul.rs  mod.rs  shape.rs
