[package]
name = "lumen"
version = "0.1.1"
edition = "2024"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
rand_distr = "0.4"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
image = "0.24" 
tokenizers = "0.19"
safetensors = "0.3"
memmap2 = "0.5"
half = "2.3"
mimalloc = "0.1"

[profile.release]
opt-level = 3       # 最高优化等级
lto = true          # 开启链接时优化
panic = "abort"     # 发生 panic 直接终止
strip = true        # 去除符号表