[package]
name = "lumen"
version = "0.1.5"
edition = "2024"
autobins = false
build = "build.rs"

[features]
default = ["host-rayon", "cli", "image-io", "model-io"]
host-rayon = ["dep:rayon", "ndarray/rayon"]
cli = ["dep:mimalloc", "dep:tokenizers", "model-io"]
image-io = ["dep:image"]
model-io = ["dep:memmap2", "dep:safetensors"]
dev-tools = []
arm64-int8-kernels = []
x86-int8-kernels = []
arm64-fp-kernels = []
x86-fp-kernels = []
cuda = []
cpu-trueos = []

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand_distr = "0.4"
rayon = { version = "1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
image = { version = "0.24", optional = true }
tokenizers = { version = "0.19", optional = true }
safetensors = { version = "0.3", optional = true }
memmap2 = { version = "0.5", optional = true }
half = "2.3"
mimalloc = { version = "0.1", optional = true }

[profile.release]
opt-level = 3       # 最高优化等级
lto = true          # 开启链接时优化
panic = "abort"     # 发生 panic 直接终止
strip = true        # 去除符号表

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("trueos", "zkvm"))'] }

[[bin]]
name = "lumen"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "quantize_safetensors"
path = "src/bin/quantize_safetensors.rs"
required-features = ["model-io"]

[[bin]]
name = "kernel_bench"
path = "src/bin/kernel_bench.rs"
required-features = ["dev-tools"]

[[bin]]
name = "prefill_decode_bench"
path = "src/bin/prefill_decode_bench.rs"
required-features = ["dev-tools", "cli"]

[[bin]]
name = "cuda_cpu_bench"
path = "src/bin/cuda_cpu_bench.rs"
required-features = ["dev-tools", "cli"]
